# llm-prompt-generator

./: README.md  prompt.txt  pyproject.toml
llm_prompt_generator/: __init__.py
tests/: __init__.py
